--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/umut.png" alt="umut Arslan's Profile Picture"></td>
+      <td><img src="images/circle-cropped (1).png" alt="umut Arslan's Profile Picture"></td>
       <td>
         <h1>Umut ARSLAN</h1>
         <p><em>Junior Web Developer candidate</em></p>
