--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       <td>
         <h1>Umut ARSLAN</h1>
         <p><em>Junior Web Developer candidate</em></p>
-        <p>Im a traine junior web Developer candidate.</p>
         <p>Former Flight Attendant<a href="https://www.flypgs.com/en"> @ Pegasus Airlines</a> <a href="https://www.onurair.com/en/"> @ Onur Air</a></p>
         <p>Amateur Photographer<a href="https://www.instagram.com/umtarslnphoto/"> Instagram</a></p>
         <p>Based in London</p>
@@ -24,6 +23,7 @@
   <hr>
   <h3>Education</h3>
   <ul>
+    <li>The Complete 2020 Web Development Bootcamp (in progres)</li>
     <li>Edgware Academy School of English</li>
     <li>Bahcelievler Ticaret Meslek Lisesi </li>
     <li>Askaleli Ibrahim Polat Ilkogretim Okulu </li>
